--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -92,7 +92,8 @@
 
                             <button onclick="toggleContent15()">Oficios</button>
                                     <div id="content15" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                        <iframe src="https://learningapps.org/watch?app=11454918" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                        </div>           
+                                        <iframe src="https://learningapps.org/watch?app=11454918" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                        
+                                    </div>           
                             </div>
                             <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
 
