--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -100,7 +100,7 @@
                                         <iframe src="https://learningapps.org/watch?v=psokumt6520" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                     </div>           
                                 <br>        
-                            <button onclick="toggleContent17()">Oficios</button>
+                            <button onclick="toggleContent17()">Géneros</button>
                                     <div id="content17" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                  
                                       </div>           
@@ -109,7 +109,7 @@
                                           <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                  
                                         </div>           
   
-                            <button onclick="toggleContent19()">Género</button>
+                            <button onclick="toggleContent19()">Oficios</button>
                                         <div id="content19" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                             <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                    </div>           
     
