--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -106,12 +106,12 @@
                                       </div>           
                             <button onclick="toggleContent18()">Colores</button>
                                       <div id="content18" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                          <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                  
+                                          <iframe src="https://www.flippity.net/mg.php?k=1b8ypy-HTWL8skkBLC8MN4x5IFeX0pr_skQmbbYmlap4" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
                                         </div>           
   
                             <button onclick="toggleContent19()">Oficios</button>
                                         <div id="content19" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                            <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch.php?v=pxuke6z5j16&amp;allowFullscreen=1" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                    </div>           
+                                            <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch?app=11454918" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                    </div>           
     
                                 </div>
                             <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
