--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -111,8 +111,12 @@
   
                             <button onclick="toggleContent19()">Oficios</button>
                                         <div id="content19" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                            <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch?app=11454918" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                    </div>           
-    
+                                            <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://learningapps.org/watch?app=11454918" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                   
+                                         </div>           
+
+                             <button onclick="toggleContent20()">Números</button>
+                                            <div id="content19" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                <iframe id="languagesonline" src="http://www.education.vic.gov.au/languagesonline/spanish/topic07/no_03/spanish_07_03.htm" width="790" height="550" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" hspace="0" vspace="0" frameborder="1" scrolling="no"></iframe>    
                                 </div>
                             <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
 
