--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -67,13 +67,12 @@
                                 <h2>Práctica </h2>
                         <button onclick="toggleContent10()">Países 1</button>
                         <div id="content10" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                            <iframe id="languagesonline" src="https://www.education.vic.gov.au/languagesonline/spanish/topic14/no_08/spanish_14_08.htm" width="790" height="550" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" hspace="0" vspace="0" frameborder="1" scrolling="no"></iframe>
-                        </div>     
+                            <iframe src="https://learningapps.org/watch?app=5498851" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div>     
                   
                         <button onclick="toggleContent11()">Países 2</button>
                         <div id="content11" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                            <iframe id="languagesonline" src="https://www.education.vic.gov.au/languagesonline/spanish/topic14/no_02/spanish_14_02.htm" width="790" height="550" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" hspace="0" vspace="0" frameborder="1" scrolling="no"></iframe>
-                        </div>                            
+                            <iframe src="https://learningapps.org/watch?v=pphruay3k20" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                             </div>                            
                         
                         <button onclick="toggleContent12()">Familia 1</button>
                         <div id="content12" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
