--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -118,6 +118,11 @@
                                             <div id="content20" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe id="frame" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" src="https://www.education.vic.gov.au/languagesonline/spanish/topic07/no_03/spanish_07_03.htm" frameborder="0" width="100%" height="500" style="overflow:hidden;background:white"></iframe>                                   
                                             </div> 
+                            <button onclick="toggleContent21()">Ser o Estar</button>
+                                            <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                            </div> 
+
                                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
 
 </article>
