--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -121,6 +121,10 @@
                                             <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div> 
+                            <button onclick="toggleContent26()">Pretérito Indefinido (1)</button>
+                                            <div id="content26" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                            </div> 
+
 
                                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
 
