--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -77,8 +77,7 @@
                         <button onclick="toggleContent12()">Familia</button>
                         <div id="content12" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                             <iframe src="https://learningapps.org/watch?v=pg4ry9pe220" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                                                    </div>                            
-                        
+                                </div>                            
                             <button onclick="toggleContent13()">Antónimos 1</button>
                             <div id="content13" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                 <iframe id="languagesonline" src="https://learningapps.org/watch?v=p2m0vurb320" width="790" height="550" marginwidth="0" marginheight="0" leftmargin="0" topmargin="0" hspace="0" vspace="0" frameborder="1" scrolling="no"></iframe>                    
@@ -121,9 +120,41 @@
                                             <div id="content21" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                 <iframe src="https://learningapps.org/watch?app=10797103" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                                             </div> 
-                            <button onclick="toggleContent26()">Pretérito Indefinido (1)</button>
+                            <button onclick="toggleContent26()">Ser/Estar/Hay (1)</button>
                                             <div id="content26" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-                                                <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                            </div> 
+                                                <iframe src="https://learningapps.org/watch?app=11004677" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                            </div> 
+                            <button onclick="toggleContent27()">Ser/Estar/Hay (2)</button>
+                                                <div id="content27" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=13685765" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div> 
+                                                <br> 
+                             <button onclick="toggleContent28()">Gerundio 1</button>
+                                                <div id="content28" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=10788281" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div> 
+                            <button onclick="toggleContent29()">Infinitivo/Gerundio/Participio</button>
+                                                <div id="content29" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=14896165" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div> 
+                            <button onclick="toggleContent30()">¿Gerundio o Participio?</button>
+                                                <div id="content30" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=12029946" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div> 
+                                                <br> 
+                            <button onclick="toggleContent31()">Pretérito Indefinido (1)</button>
+                                                <div id="content31" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=3641225" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                            
+                                                </div> 
+                            <button onclick="toggleContent32()">Pretérito Indefinido (2)</button>
+                                                <div id="content32" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=15939973" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                                </div> 
+                             <button onclick="toggleContent33()">Pretérito Indefinido (3)</button>
+                                                <div id="content33" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                                    <iframe src="https://learningapps.org/watch?app=13060010" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>    
+
+                                                </div> 
 
 
                                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
