--- a/cursos/spanish/a1.html
+++ b/cursos/spanish/a1.html
@@ -153,9 +153,8 @@
                              <button onclick="toggleContent33()">Pretérito Indefinido (3)</button>
                                                 <div id="content33" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                                     <iframe src="https://learningapps.org/watch?app=13060010" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>    
-
                                                 </div> 
-
+                                                <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
                                                 <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">    
 
