--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -45,8 +45,11 @@
                         <button onclick="toggleContent36()">Profesiones II</button>
                             <div id="content36" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                 <iframe src="https://learningapps.org/watch?app=13668109" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                 
-
-                  
+                                <div><br> 
+                         <button onclick="toggleContent37()">Adverbios de Frecuencia</button>
+                                <div id="content37" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                    <iframe src="https://learningapps.org/watch?app=17407069" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                  
+    
 
 </footer>
 
