--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -50,7 +50,7 @@
                         <button onclick="toggleContent37()">Adverbios de Frecuencia</button>
                                     <div id="content37" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?app=17407069" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                   
-                                     </div><br> 
+                                     </div>
                         <button onclick="toggleContent38()">Palabras Agu/Gra/Esd/Sobr</button>
                                      <div id="content38" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://www.flippity.net/sw.asp?k=1B-6UCeVAbTR79FwsrZ91PoIRhK_UUVVrf5kJz1ADHKs" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
