--- a/cursos/iea/unidad-ii/index.html
+++ b/cursos/iea/unidad-ii/index.html
@@ -9,6 +9,15 @@
             bottom: 10px; 
             } 
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TF5J20WEMP');
+</script>
 </head>
 <body>
   <!-- GTranslate: https://gtranslate.io/ -->
