--- a/cursos/iea/unidad-iv.html
+++ b/cursos/iea/unidad-iv.html
@@ -11,6 +11,15 @@
     <script src="../../jquery.js"></script>
     <script src="../../script.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TF5J20WEMP');
+</script>
 </head>
 <body>
   <!-- GTranslate: https://gtranslate.io/ -->
