--- a/cursos/spanish/index.html
+++ b/cursos/spanish/index.html
@@ -7,6 +7,15 @@
 
     <link rel="stylesheet" href="style.css" media="screen">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TF5J20WEMP');
+</script>
 </head>
 <body>    
 
