--- a/index_prueba.html
+++ b/index_prueba.html
@@ -34,6 +34,15 @@
     }
   </style>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TF5J20WEMP');
+</script>
 </head>
 <body>
   <!-- GTranslate: https://gtranslate.io/ -->
@@ -64,6 +73,15 @@
   /* ]]> */
   </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TF5J20WEMP');
+</script>
 </head>
 
 <body>
