--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 ﻿<!DOCTYPE html>
-<html dir="ltr" lang="en-US"><head><!-- Created by Artisteer v4.0.0.58475 -->
+<html dir="ltr" lang="en-US"><head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P99XZHR');</script>
+<!-- End Google Tag Manager --><!-- Created by Artisteer v4.0.0.58475 -->
     <meta charset="utf-8">
     <title>Rodare</title>
 
@@ -22,18 +29,12 @@
 </script>
 
 
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TF5J20WEMP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-TF5J20WEMP');
-</script>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P99XZHR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- GTranslate: https://gtranslate.io/ -->
   <a href="#" onclick="doGTranslate('es|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a><a href="#" onclick="doGTranslate('es|fr');return false;" title="French" class="gflag nturl" style="background-position:-200px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="French" /></a><a href="#" onclick="doGTranslate('es|de');return false;" title="German" class="gflag nturl" style="background-position:-300px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="German" /></a><a href="#" onclick="doGTranslate('es|it');return false;" title="Italian" class="gflag nturl" style="background-position:-600px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Italian" /></a><a href="#" onclick="doGTranslate('es|ja');return false;" title="Japanese" class="gflag nturl" style="background-position:-700px -100px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Japanese" /></a><a href="#" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a><a href="#" onclick="doGTranslate('es|pt');return false;" title="Portuguese" class="gflag nturl" style="background-position:-300px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Portuguese" /></a><a href="#" onclick="doGTranslate('es|ru');return false;" title="Russian" class="gflag nturl" style="background-position:-500px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Russian" /></a><a href="#" onclick="doGTranslate('es|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
 
@@ -117,7 +118,7 @@
             <h3 class="t">Actividad Académica</h3>
         </div>
         <div class="vmenublockcontent">
-<ul class="vmenu"><li><a href="rodare.html" class="active">Rodare</a></li><li><a href="cursos.html">Cursos</a><ul><li><a href="cursos/iea.html">IEA</a><ul><li><a href="cursos/iea/unidad-i.html">Unidad I</a></li><li><a href="cursos/iea/unidad-ii.html">Unidad II</a></li><li><a href="cursos/iea/unidad-iii.html">Unidad III</a></li><li><a href="cursos/iea/unidad-iv.html">Unidad IV</a></li></ul></li><li><a href="cursos/fda.html">FDA</a><ul><li><a href="cursos/fda/unidad-i.html">Unidad I</a></li><li><a href="cursos/fda/unidad-ii.html">Unidad II</a></li></ul></li></ul></li><li><a href="http://rodare.cf/portal">Blog</a></li><li><a href="curriculum.html">Currículum</a></li><li><a href="articulos.html">Artículos</a></li><li><a href="contacto.html">Contacto</a></li></ul>
+<ul class="vmenu"><li><a href="rodare.html" class="active">Rodare</a></li><li><a href="cursos.html" onClick="ga('send','event','Link','Manual','Homepage';">Cursos</a><ul><li><a href="cursos/iea.html">IEA</a><ul><li><a href="cursos/iea/unidad-i.html">Unidad I</a></li><li><a href="cursos/iea/unidad-ii.html">Unidad II</a></li><li><a href="cursos/iea/unidad-iii.html">Unidad III</a></li><li><a href="cursos/iea/unidad-iv.html">Unidad IV</a></li></ul></li><li><a href="cursos/fda.html">FDA</a><ul><li><a href="cursos/fda/unidad-i.html">Unidad I</a></li><li><a href="cursos/fda/unidad-ii.html">Unidad II</a></li></ul></li></ul></li><li><a href="http://rodare.cf/portal">Blog</a></li><li><a href="curriculum.html">Currículum</a></li><li><a href="articulos.html">Artículos</a></li><li><a href="contacto.html">Contacto</a></li></ul>
 
         </div>
 </div></div>
