--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US"><head>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P99XZHR');</script>
+<!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <title>Español</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +24,11 @@
   gtag('config', 'G-TF5J20WEMP');
 </script>
 </head>
-<body>    
+<body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P99XZHR"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->    
 
 <h2 class="headline" data-left="2.05%">
     <a class="img-banner" href="index.html">Español</a>
