--- a/cursos/iea/unidad-i.html
+++ b/cursos/iea/unidad-i.html
@@ -139,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p class="MsoNormalart-art-"><span lang="ES-TRAD" style="font-size: 12pt; line-height: 115%; font-family: Arial, sans-serif;"></span></p>
         <p class="MsoNormalart-art-"><b><span lang="ES-MX" style="font-size: 12pt; line-height: 115%;">Bibliografía</span></b></p>
         <ul type="disc">
-        <li class="MsoNormalart-art-"><span style="font-size: 16px;"><a href="unidad-i/valores-asiaticos.pdf">Lee, E. J. (1998): “¿Valores asiáticos como ideal de civilización?”. Nueva Sociedad, 155, 111-125.</a><span style="line-height: 115%; font-family: Arial, sans-serif;"></span></span></li>
+        <li class="MsoNormalart-art-"><span style="font-size: 16px;"><a href="unidad-i/valores-asiaticos.pdf" onClick="ga('send', 'event', 'Link', 'Cursos', 'Homepage'";>Lee, E. J. (1998): “¿Valores asiáticos como ideal de civilización?”. Nueva Sociedad, 155, 111-125.</a><span style="line-height: 115%; font-family: Arial, sans-serif;"></span></span></li>
         <li class="MsoNormalart-art-"><span style="font-size: 16px;"><a href="unidad-i/pensamiento-asia-americalatina.pdf">Devés, E. y Ricardo Melgar Bao (2005): “El pensamiento del Asia en América Latina: Hacia una cartografía”. Revista de Hispanismo Filosófico, 10.</a><span style="line-height: 115%; font-family: Arial, sans-serif;"></span></span></li>
         <li class="MsoNormalart-art-"><span style="font-size: 16px;"><a href="unidad-i/universalismo-particularismo-identidad.pdf">Laclau, E., 1995. Universalismo, Particularismo y el tema de la Identidad. Rifp, 5, pp.38–52.</a><span style="line-height: 115%; font-family: Arial, sans-serif;"></span></span></li>
         </ul>
