--- a/papers.html
+++ b/papers.html
@@ -169,7 +169,7 @@ Anarchy is what states make of it: Critical Analysis of the author’s arguments
 <ul>
 <li><a href="http://rodare.cf/papers/en-castellano/Arenas,%20R.%202011.%20Sobre%20el%20Cine%20de%20Naomi%20Kawase.pdf">Arenas, R. (2011). “Ni tsutsumarete”
 y “Tarachime” de Naomi Kawase. <span style="font-style: italic;">Rodare</span>, 1-14.</a></li>
-<li><a href="http://rodare.cf/papers/en-castellano/Arenas,%20R.%202010.%20Sobre%20la%20M%fasica%20en%20el%20Cine%20de%20Kubric.pdf">Arenas, R. (2010). La música en el cine: Kubrick o la doble lectura. <span style="font-style: italic;">Rodare</span>, 1-7.</a></li>
+<li><a href="http://rodare.cf/papers/en-castellano/Arenas,%2520R.%25202010.%2520Sobre%2520la%2520M%25fasica%2520en%2520el%2520Cine%2520de%2520Kubric.pdf">Arenas, R. (2010). La música en el cine: Kubrick o la doble lectura. <span style="font-style: italic;">Rodare</span>, 1-7.</a></li>
 <li><a href="http://rodare.cf/papers/en-castellano/Arenas,%20R.%202010.%20Sobre%20la%20Ideolog%eda.pdf">Arenas, R. (2010). El discurso ideológico en el cine documental. <span style="font-style: italic;">Rodare</span>, 1-7.</a></li>
 <li><a href="http://rodare.cf/papers/en-castellano/Arenas,%20R.%202010.%20Sobre%20el%20G%e9nero%20Documental.pdf">Arenas, R. (2010). El documental como expresión artística: “El hombre de la cámara” de Vertov, Versus “Nanuk, el esquimal” de Flaherty. <span style="font-style: italic;">Rodare</span>, 1-3.</a></li>
 </ul>
