--- a/cursos/spanish/a2.html
+++ b/cursos/spanish/a2.html
@@ -75,11 +75,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                      <div id="content38" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://www.flippity.net/sw.asp?k=1s3dWQZi2bNAARYSgylNgFKqioHnkn44GdcuZbCpkzU4" style="border:0px;width:100%;height:500px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>                                  
                                     </div> 
-                        <button onclick="toggleContent39()">Conjugación Verbos irreg.</button>
+                        <button onclick="toggleContent39()">Conjugación Verbos irreg. (1)</button>
                                     <div id="content39" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                                         <iframe src="https://learningapps.org/watch?v=pr0vma21j21" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
  
                                     </div><br> 
+                        <button onclick="toggleContent40()">Conjugación Verbos irreg. (2)</button>
+                                    <div id="content40" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                        <iframe src="https://learningapps.org/watch?app=17794565" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+                                    </div>
+                         <button onclick="toggleContent41()">Conjugación Verbos irreg. (3)</button>
+                                    <div id="content41" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+                                        <iframe src="https://learningapps.org/watch?app=14309042" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe> 
+                                    </div>
 
 </article>
 </div>
