--- a/cursos/english/index.html
+++ b/cursos/english/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="col-10">
         <h6>About</h6>
-        <p>asdñlk fajs dk lfja ñlka sd j flkñ asdj flñak dsj fl ñasdj flk ñasdj fl akñsdj flñ aksdj flñ aksd jf lñaks dj flañk. Dsj falkds fj</p>
+        <p>The purpose of this website is to give students access to a series of language exercises that specifically target each English language level from A1 to C2.</p>
       </div>
   </div>
 
