--- a/cursos/english/a1.html
+++ b/cursos/english/a1.html
@@ -18,11 +18,11 @@
     <h2 class="headline" data-left="2.05%">
     <a class="img-banner" href="index.html">English</a></h2>
     </div>
-
+    </div>
     <div class="row justify-content-evenly align-items-start gx-0">
       <div class="col-2 menu">
         <ul class="con-padding-top">
-        <li>About</li>
+        <li><a href="index.html">About</a></li>
         <li><div class="accordion accordion-flush my-custom-accordion" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
@@ -36,8 +36,8 @@
           </div>
         </div>
         </li>
-        <li>Teacher</li>
-        <li>Contact</li>
+        <li><a href="teacher.html">Teacher</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="col-10">
@@ -48,19 +48,24 @@
           introduce yourself and others.
           ask and answer questions about personal details (for example, where you live, people you know and things you have.
           interact in a simple way provided the other person talks slowly and clearly and is prepared to help.</p>
-
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
           <h6>Mini Tests</h6>
-          <p>
-  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+<!--aquí va el iframe
+          <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     Mini-Test 1
   </a>
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card card-body responsive">
-    <iframe class="responsive-iframe" src="https://docs.google.com/forms/d/e/1FAIpQLScoPAu0zsbVusHuiashHix_ahxmUSt-IO3lWYxbvMfWmrFrLw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+<!-aquí va el iframe-->
   </div>
 </div>
-        </div>
+
+
     </div>
 
       <!-- Option 1: Bootstrap Bundle with Popper -->
