--- a/cursos/english/contact.html
+++ b/cursos/english/contact.html
@@ -42,35 +42,30 @@
       </div>
       <div class="col-10">
 
-            <h6>B2 Level</h6>
-            <p>At the end of English level B2, you can:
-            understand the main ideas of complex text on a variety of topics, including technical discussions in your field of specialisation.
-            interact with a degree of fluency and spontaneity that makes regular interaction with native speakers quite possible without strain for either party.
-            produce clear, detailed text on a wide range of subjects and explain a viewpoint on a topical issue giving the advantages and disadvantages of various options.
-            </p>
-          </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-            <h6>Mini Tests</h6>
-  <!--aquí va el iframe
-            <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      Mini-Test 1
-    </a>
-  </p>
-  <div class="collapse" id="collapseExample">
-    <div class="card card-body responsive">
-
-  <!-aquí va el iframe-->
-    </div>
+    <h2>Contact</h2>
+    <p>You can contact me to this e-mail address: <a href="mailto:rodare.cf@gmail.com?Subject=Hello%20Rodrigo" target="_top">rodare.cf@gmail.com</a>
+    </p>
   </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+                  <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+            Contact Form
+          </a>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body responsive">
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeofogoaY5OXrdhD8X3W_OC8iZDBml2KuhwKQDoYYRb01vJsg/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        </div>
+                      </div>
 
 
-      </div>
+                          </div>
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        </div>
-      </div>
-      </body>
-    </html>
+                            <!-- Option 1: Bootstrap Bundle with Popper -->
+                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+                            </div>
+                          </div>
+                          </body>
+                        </html>
