--- a/cursos/english/index.html
+++ b/cursos/english/index.html
@@ -22,7 +22,7 @@
     <div class="row justify-content-evenly align-items-start gx-0">
       <div class="col-2 menu">
         <ul class="con-padding-top">
-        <li>About</li>
+        <li><a href="index.html">About</a></li>
         <li><div class="accordion accordion-flush my-custom-accordion" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
@@ -36,8 +36,8 @@
           </div>
         </div>
         </li>
-        <li>Teacher</li>
-        <li>Contact</li>
+        <li><a href="teacher.html">Teacher</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="col-10">
