--- a/cursos/english/teacher.html
+++ b/cursos/english/teacher.html
@@ -18,7 +18,7 @@
     <h2 class="headline" data-left="2.05%">
     <a class="img-banner" href="index.html">English</a></h2>
     </div>
-    </div>
+
     <div class="row justify-content-evenly align-items-start gx-0">
       <div class="col-2 menu">
         <ul class="con-padding-top">
@@ -42,30 +42,11 @@
       </div>
       <div class="col-10">
 
-            <h6>B2 Level</h6>
-            <p>At the end of English level B2, you can:
-            understand the main ideas of complex text on a variety of topics, including technical discussions in your field of specialisation.
-            interact with a degree of fluency and spontaneity that makes regular interaction with native speakers quite possible without strain for either party.
-            produce clear, detailed text on a wide range of subjects and explain a viewpoint on a topical issue giving the advantages and disadvantages of various options.
-            </p>
+            <h6>Teacher</h6>
+            <p>Bachelor of Laws from Hokkaido University, Japan (Japanese government
+            scholarship recipient - 6 years of studies in Japanese language) and Master of International Relations from the University of Melbourne (2 years in Australia). Diploma in Documentary Cinema from the University of Chile and two Diplomas in University Teaching from the Catholic Northern University and the Saint Thomas University in Chile's fourth region. Over 10 years of work experience in Chile, Japan, and Poland as a university lecturer, international consultant, language tutor, and translator.
+            Active in Arts (Music, Visual Arts, Cinema and Performing Arts), and Sports (mainly Cycling and Swimming) </p>
           </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-            <h6>Mini Tests</h6>
-  <!--aquí va el iframe
-            <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      Mini-Test 1
-    </a>
-  </p>
-  <div class="collapse" id="collapseExample">
-    <div class="card card-body responsive">
-
-  <!-aquí va el iframe-->
-    </div>
-  </div>
-
-
       </div>
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
