--- a/cursos/english/a2.html
+++ b/cursos/english/a2.html
@@ -18,11 +18,11 @@
     <h2 class="headline" data-left="2.05%">
     <a class="img-banner" href="index.html">English</a></h2>
     </div>
-
+    </div>
     <div class="row justify-content-evenly align-items-start gx-0">
       <div class="col-2 menu">
         <ul class="con-padding-top">
-        <li>About</li>
+        <li><a href="index.html">About</a></li>
         <li><div class="accordion accordion-flush my-custom-accordion" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
@@ -36,25 +36,37 @@
           </div>
         </div>
         </li>
-        <li>Teacher</li>
-        <li>Contact</li>
+        <li><a href="teacher.html">Teacher</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="col-10">
+          <h6>A2 Level</h6>
+          <p>At the end of English level A2, you can:
+          understand sentences and frequently used expressions related to common areas (e.g. very basic personal and family information, shopping, local geography, employment).
+          communicate in simple and routine tasks requiring a simple and direct exchange of information.
+          describe in simple terms aspects of your background and immediate matters.</p>
+        </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+          <h6>Mini Tests</h6>
+          <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Mini-Test 1
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body responsive">
 
-                            <h6>A2 Level</h6>
-                        <p>At the end of English level A2, you can:
-                        understand sentences and frequently used expressions related to common areas (e.g. very basic personal and family information, shopping, local geography, employment).
-                        communicate in simple and routine tasks requiring a simple and direct exchange of information.
-                        describe in simple terms aspects of your background and immediate matters.</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScoPAu0zsbVusHuiashHix_ahxmUSt-IO3lWYxbvMfWmrFrLw/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
 
-                <h6>Mini Tests</h6>
-              </div>
-          </div>
 
-            <!-- Option 1: Bootstrap Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-            </div>
-          </div>
-          </body>
-        </html>
+    </div>
+
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+      </div>
+    </div>
+    </body>
+  </html>
