--- a/cursos/english/c2.html
+++ b/cursos/english/c2.html
@@ -18,11 +18,11 @@
     <h2 class="headline" data-left="2.05%">
     <a class="img-banner" href="index.html">English</a></h2>
     </div>
-
+    </div>
     <div class="row justify-content-evenly align-items-start gx-0">
       <div class="col-2 menu">
         <ul class="con-padding-top">
-        <li>About</li>
+        <li><a href="index.html">About</a></li>
         <li><div class="accordion accordion-flush my-custom-accordion" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
@@ -36,8 +36,8 @@
           </div>
         </div>
         </li>
-        <li>Teacher</li>
-        <li>Contact</li>
+        <li><a href="teacher.html">Teacher</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div class="col-10">
@@ -47,14 +47,29 @@
                               understand virtually everything heard or read with ease.
                               summarise information from different spoken and written sources, reconstructing arguments and accounts in a coherent presentation.
                               express yourself spontaneously, very fluently and precisely, differentiating finer shades of meaning even in more complex situations.                            </p>
+                            </div>
+                            </div>
+                            <div class="row">
+                              <div class="col-12">
+                              <h6>Mini Tests</h6>
+                    <!--aquí va el iframe
+                              <p><a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                        Mini-Test 1
+                      </a>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                      <div class="card card-body responsive">
 
-                                            <h6>Mini Tests</h6>
-                                          </div>
-                                      </div>
+                    <!-aquí va el iframe-->
+                      </div>
+                    </div>
 
-                                        <!-- Option 1: Bootstrap Bundle with Popper -->
-                                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-                                        </div>
-                                      </div>
-                                      </body>
-                                    </html>
+
+                        </div>
+
+                          <!-- Option 1: Bootstrap Bundle with Popper -->
+                          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+                          </div>
+                        </div>
+                        </body>
+                      </html>
